feat: added validators & updated users controllers, zod partially setup
